--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ readme = "README.md"
 requires-python = ">=3.7"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Your Name", email = "jithubaiju124@gmail.com"}
 ]
 maintainers = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Your Name", email = "jithubaiju124@gmail.com"}
 ]
 keywords = [
     "debugging",
@@ -61,11 +61,11 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/ai-dbug"
-Documentation = "https://github.com/yourusername/ai-dbug#readme"
-Repository = "https://github.com/yourusername/ai-dbug"
-"Bug Tracker" = "https://github.com/yourusername/ai-dbug/issues"
-Changelog = "https://github.com/yourusername/ai-dbug/blob/main/CHANGELOG.md"
+Homepage = "https://github.com/jithubaiju55/ai-dbug"
+Documentation = "https://github.com/jithubaiju55/ai-dbug#readme"
+Repository = "https://github.com/jithubaiju55/ai-dbug"
+"Bug Tracker" = "https://github.com/jithubaiju55/ai-dbug/issues"
+Changelog = "https://github.com/jithubaiju55/ai-dbug/blob/main/CHANGELOG.md"
 
 [tool.setuptools]
 packages = ["ai_dbug"]
