--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ai-dbug"
-version = "0.1.0"
+version = "0.1.2"
 description = "AI-powered Python debugger that explains errors in plain English with practical fixes"
 readme = "README.md"
 requires-python = ">=3.7"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "jithubaiju124@gmail.com"}
+    {name = "Jithu Baiju", email = "jithubaiju124@gmail.com"}
 ]
 maintainers = [
-    {name = "Your Name", email = "jithubaiju124@gmail.com"}
+    {name = "Jithu Baiju", email = "jithubaiju124@gmail.com"}
 ]
 keywords = [
     "debugging",
